# exchange

./: .gitignore  .prettierignore  Cargo.toml  README.md  TEST_GUIDE.md  claude.md  docker-compose.yaml  justfile  package.json
.devcontainer/: .zshrc  (+4 more)
apps/backend/: .env.defaults  Cargo.toml  Dockerfile  config.toml
apps/backend/.sqlx/: query-2b189aaf594e977bef2d331f2f09882585716ff7e2f85ca8ca9e4a85a89c74b1.json  query-38e6d5240c9ce0dbe96a8fc103e963865022233d7f4d14975ac441b88c285f88.json  query-6388cc980e89d8e011044129cad18ad4b09f2556a98b76f90b7c6e1a59606f6b.json  query-6ac8c9852dc757f83a66eda0175d6aec96dfe2cf25cc60f13e55630dd697f4a0.json  query-84a77515d3e6e62fb7e044f3e491a146664f0a8c96922c6a5bc43125b46a1b86.json  query-8740c512870358bfd75afd005f6c6e5a95d458e869598112c3510b8a76c39324.json  query-f28155b28020f21196b7d7d9297afd2a2997cf4a8df943e1218fb2c8a254298b.json
apps/backend/benches/: balance_benchmarks.rs  latency_benchmarks.rs  matching_benchmarks.rs
apps/backend/scripts/: generate_openapi.rs
apps/backend/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
apps/backend/src/api/rest/: admin.rs  candles.rs  drip.rs  info.rs  mod.rs  trade.rs  user.rs
apps/backend/src/db/: balances.rs  candles.rs  markets.rs  mod.rs  orders.rs  setup.rs  tokens.rs  trades.rs  users.rs
apps/backend/src/engine/: executor.rs  matcher.rs  mod.rs  orderbook.rs  orderbooks_v2.rs
apps/backend/src/models/: api.rs  db.rs  domain.rs  mod.rs
apps/backend/src/utils/: mod.rs
apps/backend/tests/: balance_edge_cases_tests.rs  balance_events_tests.rs  candles_integration_tests.rs  clickhouse_schema_tests.rs  db_integration_tests.rs  engine_integration_tests.rs  integration_tests.rs  rest_integration_tests.rs  utils.rs  ws_integration_tests.rs
apps/bots/: .env.defaults  Cargo.toml  Dockerfile  bots.md  config.toml
apps/bots/src/: config.rs  lib.rs  main.rs
apps/bots/src/bots/: orderbook_mirror.rs  trade_mirror.rs
apps/bots/src/hyperliquid/: mod.rs  orderbook.rs
apps/bots/src/markets/: mod.rs
apps/bots/src/utils/: bot_helpers.rs  mod.rs
apps/bots/tests/: bot_conversion_tests.rs  integration_tests.rs
(+125 files in other folders)
