[package]
name = "backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
clickhouse.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

# OrderBook-rs integration
orderbook-rs = "0.4.8"
rust_decimal = "1.33"
dashmap = "6.1.0"

[dev-dependencies]
criterion.workspace = true
exchange-test-utils.workspace = true
futures.workspace = true
reqwest.workspace = true
testcontainers.workspace = true
tokio-tungstenite.workspace = true

[[bench]]
name = "matching_benchmarks"
harness = false

[[bench]]
name = "balance_benchmarks"
harness = false

[[bench]]
name = "latency_benchmarks"
harness = false
