[package]
name = "exchange-bots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "bots"

[[bin]]
name = "bots"
path = "src/main.rs"

[dependencies]
backend.workspace = true
# Exchange SDK
exchange-sdk.workspace = true
futures-util.workspace = true

# Async runtime
tokio.workspace = true
tokio-tungstenite.workspace = true

# HTTP client
reqwest.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# Configuration
config.workspace = true
rust_decimal.workspace = true
toml.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
exchange-test-utils.workspace = true
